--- a/sten-saks-papir-l-sning-master/public/index.html
+++ b/sten-saks-papir-l-sning-master/public/index.html
@@ -36,12 +36,12 @@
         <div id="playPicture"><img id="playPalme" src="./assets/Banan_palme-palme_clicker.png" alt="cum"></div>
         <div class="scoreDiv">
             <div id="player1">
-                <div id="player1Name">Mogens</div>
-                <div id="player1Score">69🍌</div>
+                <div id="player1Name"></div>
+                <div id="player1Score"></div>
             </div>
             <div id="player2">
-                <div id="player2Name">Burger</div>
-                <div id="player2Score">50🍌</div>
+                <div id="player2Name"></div>
+                <div id="player2Score"></div>
             </div>
         </div>
         
